added get all notifications api
