# storage/api-docs/api-docs.json
@@ -2924,6 +2924,197 @@
                 }
             }
         },
+        "/api/user/notifications": {
+            "get": {
+                "tags": [
+                    "Notification"
+                ],
+                "summary": "Get User's Notifications",
+                "operationId": "dddf8a0ea765f44b22171d46095b1898",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "example": {
+                                        "message": "Success!",
+                                        "notifications": {
+                                            "current_page": 1,
+                                            "data": [
+                                                {
+                                                    "id": 21,
+                                                    "title": "Puryaideu: Ride Update",
+                                                    "message": " The ride has been ACCEPTED!",
+                                                    "image": null,
+                                                    "recipient_id": 3,
+                                                    "recipient_device_token": "dOUDZJ1fR6Kqp7vRNSE3KN:APA91bGbJOp3LWT_VptlGh5MZhM0Afq1r6Z26bXvdjKNcXP4ZAlxmNb1Z1wRh5vYszkYYqlA08-GKCH2lMezP_-HpEe7zhPV5lM_LnMvQToGfq3l6JiLdEBC-CgqGG7XH8WZVEc55Tvd",
+                                                    "recipient_type": "customer",
+                                                    "recipient_quantity_type": "some",
+                                                    "notification_type": "booking_accepted",
+                                                    "read_at": null,
+                                                    "deleted_at": null,
+                                                    "created_at": "2021-12-20T11:55:17.000000Z",
+                                                    "updated_at": "2021-12-20T11:55:17.000000Z",
+                                                    "thumbnail_path": "assets/media/noimage.png",
+                                                    "image_path": "assets/media/noimage.png"
+                                                },
+                                                {
+                                                    "id": 20,
+                                                    "title": "Puryaideu: Ride Update",
+                                                    "message": " New ride requested!",
+                                                    "image": null,
+                                                    "recipient_id": 3,
+                                                    "recipient_device_token": "dOUDZJ1fR6Kqp7vRNSE3KN:APA91bGbJOp3LWT_VptlGh5MZhM0Afq1r6Z26bXvdjKNcXP4ZAlxmNb1Z1wRh5vYszkYYqlA08-GKCH2lMezP_-HpEe7zhPV5lM_LnMvQToGfq3l6JiLdEBC-CgqGG7XH8WZVEc55Tvd",
+                                                    "recipient_type": "customer",
+                                                    "recipient_quantity_type": "individual",
+                                                    "notification_type": "booking_created",
+                                                    "read_at": null,
+                                                    "deleted_at": null,
+                                                    "created_at": "2021-12-20T11:37:41.000000Z",
+                                                    "updated_at": "2021-12-20T11:37:41.000000Z",
+                                                    "thumbnail_path": "assets/media/noimage.png",
+                                                    "image_path": "assets/media/noimage.png"
+                                                }
+                                            ],
+                                            "first_page_url": "http://127.0.0.1:8000/api/user/notifications?page=1",
+                                            "from": 1,
+                                            "last_page": 1,
+                                            "last_page_url": "http://127.0.0.1:8000/api/user/notifications?page=1",
+                                            "links": [
+                                                {
+                                                    "url": null,
+                                                    "label": "&laquo; Previous",
+                                                    "active": false
+                                                },
+                                                {
+                                                    "url": "http://127.0.0.1:8000/api/user/notifications?page=1",
+                                                    "label": "1",
+                                                    "active": true
+                                                },
+                                                {
+                                                    "url": null,
+                                                    "label": "Next &raquo;",
+                                                    "active": false
+                                                }
+                                            ],
+                                            "next_page_url": null,
+                                            "path": "http://127.0.0.1:8000/api/user/notifications",
+                                            "per_page": 10,
+                                            "prev_page_url": null,
+                                            "to": 7,
+                                            "total": 7
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/rider/notifications": {
+            "get": {
+                "tags": [
+                    "Notification"
+                ],
+                "summary": "Get Rider's Notifications",
+                "operationId": "2ac926ba2974ce2bbc70173cafbda3c0",
+                "responses": {
+                    "200": {
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "example": {
+                                        "message": "Success!",
+                                        "notifications": {
+                                            "current_page": 1,
+                                            "data": [
+                                                {
+                                                    "id": 22,
+                                                    "title": "Puryaideu: Ride Update",
+                                                    "message": " The ride has been ACCEPTED!",
+                                                    "image": null,
+                                                    "recipient_id": 1,
+                                                    "recipient_device_token": "eptgkjw5ThWfxnIDLrJ_Pp:APA91bFvCkyvRevMQJErJfbDoZFNGtY6H8ZNdI-pSM--pt6bofgJMu2PZNdAe9PGNpz2wwKXdmZ5GOgcAzZl7EvAtZIJWwW9Xh0xBLwf_Qx2w_Ghz2UMW-1zwzZ_W9V4OHFxbHB7pxNy",
+                                                    "recipient_type": "rider",
+                                                    "recipient_quantity_type": "some",
+                                                    "notification_type": "booking_accepted",
+                                                    "read_at": null,
+                                                    "deleted_at": null,
+                                                    "created_at": "2021-12-20T11:55:17.000000Z",
+                                                    "updated_at": "2021-12-20T11:55:17.000000Z",
+                                                    "thumbnail_path": "assets/media/noimage.png",
+                                                    "image_path": "assets/media/noimage.png"
+                                                },
+                                                {
+                                                    "id": 17,
+                                                    "title": "Puryaideu: Ride Update",
+                                                    "message": "Your ride has been COMPLETED!",
+                                                    "image": null,
+                                                    "recipient_id": 1,
+                                                    "recipient_device_token": "eptgkjw5ThWfxnIDLrJ_Pp:APA91bFvCkyvRevMQJErJfbDoZFNGtY6H8ZNdI-pSM--pt6bofgJMu2PZNdAe9PGNpz2wwKXdmZ5GOgcAzZl7EvAtZIJWwW9Xh0xBLwf_Qx2w_Ghz2UMW-1zwzZ_W9V4OHFxbHB7pxNy",
+                                                    "recipient_type": "rider",
+                                                    "recipient_quantity_type": "some",
+                                                    "notification_type": "booking_completed",
+                                                    "read_at": null,
+                                                    "deleted_at": null,
+                                                    "created_at": "2021-12-20T11:33:46.000000Z",
+                                                    "updated_at": "2021-12-20T11:33:46.000000Z",
+                                                    "thumbnail_path": "assets/media/noimage.png",
+                                                    "image_path": "assets/media/noimage.png"
+                                                }
+                                            ],
+                                            "first_page_url": "http://127.0.0.1:8000/api/rider/notifications?page=1",
+                                            "from": 1,
+                                            "last_page": 1,
+                                            "last_page_url": "http://127.0.0.1:8000/api/rider/notifications?page=1",
+                                            "links": [
+                                                {
+                                                    "url": null,
+                                                    "label": "&laquo; Previous",
+                                                    "active": false
+                                                },
+                                                {
+                                                    "url": "http://127.0.0.1:8000/api/rider/notifications?page=1",
+                                                    "label": "1",
+                                                    "active": true
+                                                },
+                                                {
+                                                    "url": null,
+                                                    "label": "Next &raquo;",
+                                                    "active": false
+                                                }
+                                            ],
+                                            "next_page_url": null,
+                                            "path": "http://127.0.0.1:8000/api/rider/notifications",
+                                            "per_page": 10,
+                                            "prev_page_url": null,
+                                            "to": 6,
+                                            "total": 6
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "403": {
+                        "description": "Forbidden Access"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/review/create": {
             "post": {
                 "tags": [
